Changelog
=========

2020.4.0 (unreleased)
---------------------

- Also allow replacing concrete responsibles with interactive responsibles when triggering task templates. [deiferni]
- Add @@logout view to clear Plone session and redirect to CAS logout if necessary. [lgraf]
- Introduce a new property `touched` on dossiers. [mbaechtold]
- Add support for metadata_fields in OpengeverRealContentListingObject. [njohner]
- Fix sort order within task template folder. [mbaechtold]
- Fix deadline of task templates no longer shown in tabular listing. [mbaechtold]
- Add API expansion `main-dossier`. [mbaechtold]
- Make "populate_filename_column_in_favorites" UpgradeStep more robust. [lgraf]
- Disable the searchbox on the tabbed view which lists the versions of a document. [mbaechtold]
- Include additional data in @responses GET for proposal responses. [njohner]
- Include additional data in Proposal GET API endpoint. [njohner]
- Allow `trashed` as field in @listing endpoint. [tinagerber]
- Add API endpoint `@trigger-task-template` to create tasks in a dossier from a template. [deiferni]
- Extend the @favorites endpoint to let it return already resolved favorites. [elioschmutz]
- Use correct response type for proposal comment responses. [njohner]
- Add expandable endpoint @tasktree for getting task hierarchy. [buchi]
- Also normalise filename of original_message when present. [tinagerber]


2020.3.0 (2020-06-18)
---------------------

- Bump setuptools to 44.1.1 and zc.buildout to 2.13.3. [tinagerber]
- Update translations of error messages when moving objects. [tinagerber]
- Allow filtering for empty strings in @listing endpoint. [tinagerber]
- Allow negation of a filter query in @listing endpoint. [tinagerber]
- Implement batching for the @solrsearch endpoint. [elioschmutz]
- Fix contact query sources for contacts without an E-mail. [njohner]
- Make available the delete action for templates. [mbaechtold]
- Drop import_stamp column from user model. [tinagerber]