@@ -5,6 +5,7 @@ Changelog
 ---------------------
 
 - Also allow replacing concrete responsibles with interactive responsibles when triggering task templates. [deiferni]
+- Remove cross-tab logout functionality. [lgraf]
 - Add @@logout view to clear Plone session and redirect to CAS logout if necessary. [lgraf]
 - Introduce a new property `touched` on dossiers. [mbaechtold]
 - Add support for metadata_fields in OpengeverRealContentListingObject. [njohner]
